# trovedb

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  conftest.py  pyproject.toml
cards/: 01-bootstrap-pyproject.md  02-config-loader.md  03-connector-protocol.md  04-sqlite-connector.md  05-app-shell-textual.md  06-postgres-connector-v2.md  06-postgres-connector.md  07-mysql-connector-v2.md  07-mysql-connector.md  08-connection-picker.md  09-proclist-live.md  10-watch-mode-kill.md  11-locks-view.md  12-schema-browser.md  13-query-editor.md  JOURNAL_INDEX.md
cards/journals/: 01-bootstrap-pyproject.jsonl  02-config-loader.jsonl  03-connector-protocol.jsonl  04-sqlite-connector.jsonl  05-app-shell-textual.jsonl  06-postgres-connector.jsonl  07-mysql-connector.jsonl  08-connection-picker.jsonl  09-proclist-live.jsonl  10-watch-mode-kill.jsonl  11-locks-view.jsonl  12-schema-browser.jsonl  13-query-editor.jsonl
tests/: _fakes.py  test_app.py  test_cli.py  test_config.py  test_connectors.py  test_connectors_mysql.py  test_connectors_postgres.py  test_locks.py  test_picker.py  test_proclist.py  test_query_screen.py  test_schema_screen.py
trovedb/: __init__.py  app.py  cli.py  config.py  data.py
trovedb/connectors/: __init__.py  mysql.py  postgres.py  sqlite.py  types.py
trovedb/screens/: __init__.py  locks.py  picker.py  proclist.py  query.py  schema.py
trovedb/theme/: default.tcss
trovedb/widgets/: __init__.py  _format.py
