[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trovedb"
version = "0.0.1"
description = "A live operator console for SQL databases."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "textual>=1.0",
    "psycopg[binary]>=3.1",
    "aiomysql>=0.2",
    "aiosqlite>=0.20",
    "platformdirs>=4.0",
    "pydantic>=2.0",
    "pyperclip>=1.8",
]

[project.scripts]
trovedb = "trovedb.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["trovedb"]
